// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Tooltip/Tooltip Bottom positioned 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 32px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 30px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: #3498db;
  padding: 0 16px;
}

.c1 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c1:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c1:focus {
  box-shadow: none;
}

.c1:hover .icon,
.c1:focus .icon {
  color: white;
}

.c1:hover {
  background-color: #2980b9;
}

.c1:focus {
  background-color: #2980b9;
}

.c1:disabled,
.c1:disabled .icon,
.c1:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c1:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c0 {
  position: relative;
  display: inline-block;
}

.c0 .hit-area {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.c0 .appear-enter {
  opacity: 0;
}

.c0 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c0 .appear-exit {
  opacity: 1;
}

.c0 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

.c2 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: inherit;
}

<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginTop": 60,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      style={
        Object {
          "margin": "40px",
        }
      }
    >
      <div
        className="c0"
      >
        <div
          className="hit-area"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        />
        <button
          className="c1"
          size="SMALL"
          type="SECONDARY"
        >
          Hover me
        </button>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": "40px",
        }
      }
    >
      <div
        className="c0"
      >
        <div
          className="hit-area"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        />
        <button
          className="c1"
          size="SMALL"
          type="SECONDARY"
        >
          Hover me
        </button>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": "40px",
        }
      }
    >
      <div
        className="c0"
      >
        <div
          className="hit-area"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        />
        <button
          className="c1"
          size="SMALL"
          type="SECONDARY"
        >
          Hover me
        </button>
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "space-between",
        "marginTop": 80,
      }
    }
  >
    <div
      style={
        Object {
          "margin": "40px",
        }
      }
    >
      <div
        className="c0"
      >
        <div
          className="hit-area"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        />
        <div
          className="c2"
          fontWeight="inherit"
          size={18}
          type="#2f313a"
        >
          Hover me
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": "40px",
        }
      }
    >
      <div
        className="c0"
      >
        <div
          className="hit-area"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        />
        <div
          className="c2"
          fontWeight="inherit"
          size={18}
          type="#2f313a"
        >
          Hover me
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": "40px",
        }
      }
    >
      <div
        className="c0"
      >
        <div
          className="hit-area"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        />
        <div
          className="c2"
          fontWeight="inherit"
          size={18}
          type="#2f313a"
        >
          Hover me
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tooltip/Tooltip Top positioned 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 32px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 30px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: #3498db;
  padding: 0 16px;
}

.c1 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c1:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c1:focus {
  box-shadow: none;
}

.c1:hover .icon,
.c1:focus .icon {
  color: white;
}

.c1:hover {
  background-color: #2980b9;
}

.c1:focus {
  background-color: #2980b9;
}

.c1:disabled,
.c1:disabled .icon,
.c1:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c1:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c0 {
  position: relative;
  display: inline-block;
}

.c0 .hit-area {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.c0 .appear-enter {
  opacity: 0;
}

.c0 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c0 .appear-exit {
  opacity: 1;
}

.c0 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

.c2 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: inherit;
}

<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginTop": 60,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      style={
        Object {
          "border": "none",
          "margin": "40px",
        }
      }
    >
      <div
        className="c0"
      >
        <div
          className="hit-area"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        />
        <button
          className="c1"
          size="SMALL"
          type="SECONDARY"
        >
          Hover me
        </button>
      </div>
    </div>
    <div
      style={
        Object {
          "border": "none",
          "margin": "40px",
        }
      }
    >
      <div
        className="c0"
      >
        <div
          className="hit-area"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        />
        <button
          className="c1"
          size="SMALL"
          type="SECONDARY"
        >
          Hover me
        </button>
      </div>
    </div>
    <div
      style={
        Object {
          "border": "none",
          "margin": "40px",
        }
      }
    >
      <div
        className="c0"
      >
        <div
          className="hit-area"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        />
        <button
          className="c1"
          size="SMALL"
          type="SECONDARY"
        >
          Hover me
        </button>
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "space-between",
        "marginTop": 80,
      }
    }
  >
    <div
      style={
        Object {
          "border": "none",
          "margin": "40px",
        }
      }
    >
      <div
        className="c0"
      >
        <div
          className="hit-area"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        />
        <div
          className="c2"
          fontWeight="inherit"
          size={18}
          type="#2f313a"
        >
          Hover me
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "border": "none",
          "margin": "40px",
        }
      }
    >
      <div
        className="c0"
      >
        <div
          className="hit-area"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        />
        <div
          className="c2"
          fontWeight="inherit"
          size={18}
          type="#2f313a"
        >
          Hover me
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "border": "none",
          "margin": "40px",
        }
      }
    >
      <div
        className="c0"
      >
        <div
          className="hit-area"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        />
        <div
          className="c2"
          fontWeight="inherit"
          size={18}
          type="#2f313a"
        >
          Hover me
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tooltip/Tooltip auto aligned/positioned (with boundaries) 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 32px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 30px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: #3498db;
  padding: 0 16px;
}

.c1 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c1:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c1:focus {
  box-shadow: none;
}

.c1:hover .icon,
.c1:focus .icon {
  color: white;
}

.c1:hover {
  background-color: #2980b9;
}

.c1:focus {
  background-color: #2980b9;
}

.c1:disabled,
.c1:disabled .icon,
.c1:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c1:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c0 {
  position: relative;
  display: inline-block;
}

.c0 .hit-area {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.c0 .appear-enter {
  opacity: 0;
}

.c0 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c0 .appear-exit {
  opacity: 1;
}

.c0 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

<div
  className="exampleContainer"
  style={
    Object {
      "border": "solid 1px orangered",
      "display": "flex",
      "flexDirection": "column",
      "height": 300,
      "justifyContent": "space-between",
      "margin": 60,
      "width": 600,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="c0"
    >
      <div
        className="hit-area"
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
      />
      <button
        className="c1"
        size="SMALL"
        type="SECONDARY"
      >
        Hover me
      </button>
    </div>
    <div
      className="c0"
    >
      <div
        className="hit-area"
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
      />
      <button
        className="c1"
        size="SMALL"
        type="SECONDARY"
      >
        Hover me
      </button>
    </div>
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="c0"
    >
      <div
        className="hit-area"
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
      />
      <button
        className="c1"
        size="SMALL"
        type="SECONDARY"
      >
        Hover me
      </button>
    </div>
    <div
      className="c0"
    >
      <div
        className="hit-area"
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
      />
      <button
        className="c1"
        size="SMALL"
        type="SECONDARY"
      >
        Hover me
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tooltip/Tooltip auto aligned/positioned 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 32px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 30px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: #3498db;
  padding: 0 16px;
}

.c1 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c1:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c1:focus {
  box-shadow: none;
}

.c1:hover .icon,
.c1:focus .icon {
  color: white;
}

.c1:hover {
  background-color: #2980b9;
}

.c1:focus {
  background-color: #2980b9;
}

.c1:disabled,
.c1:disabled .icon,
.c1:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c1:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c0 {
  position: relative;
  display: inline-block;
}

.c0 .hit-area {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.c0 .appear-enter {
  opacity: 0;
}

.c0 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c0 .appear-exit {
  opacity: 1;
}

.c0 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

<div>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  >
    <div
      className="c0"
    >
      <div
        className="hit-area"
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
      />
      <button
        className="c1"
        size="SMALL"
        type="SECONDARY"
      >
        Hover me
      </button>
    </div>
    <div
      className="c0"
    >
      <div
        className="hit-area"
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
      />
      <button
        className="c1"
        size="SMALL"
        type="SECONDARY"
      >
        Hover me
      </button>
    </div>
  </div>
  <div
    style={
      Object {
        "bottom": 0,
        "display": "flex",
        "justifyContent": "space-between",
        "position": "fixed",
        "width": "100%",
      }
    }
  >
    <div
      className="c0"
    >
      <div
        className="hit-area"
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
      />
      <button
        className="c1"
        size="SMALL"
        type="SECONDARY"
      >
        Hover me
      </button>
    </div>
    <div
      className="c0"
    >
      <div
        className="hit-area"
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
      />
      <button
        className="c1"
        size="SMALL"
        type="SECONDARY"
      >
        Hover me
      </button>
    </div>
  </div>
</div>
`;
